class Review {
  constructor(text, rate, author) {
    this.text = text
    this.rate = rate
    this.author = author
  }
}

module.exports = Review
